--- a/mini_book/docs/statistics_perchromosome_Compare.ipynb
+++ b/mini_book/docs/statistics_perchromosome_Compare.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,16 +71,16 @@
     "import numpy as np\n",
     "from tabulate import tabulate\n",
     "\n",
-    "file_dirname = os.path.dirname(os.path.abspath('__file__'))\n",
+    "file_dirname = os.path.dirname('__file__')\n",
     "sys.path.insert(1,os.path.join(file_dirname,'python_modules'))\n",
-    "from chromosome_and_gene_positions import chromosome_position, chromosomename_roman_to_arabic\n",
-    "from chromosome_names_in_files import chromosome_name_bedfile\n",
+    "from Python_scripts.python_modules.chromosome_and_gene_positions import chromosome_position, chromosomename_roman_to_arabic\n",
+    "from Python_scripts.python_modules.chromosome_names_in_files import chromosome_name_bedfile\n",
     "\n",
     "\n",
     "#FUNCTION INPUTS\n",
-    "bed_files = [os.path.join(file_dirname,'..','satay_analysis_testdata','Output_Processing','Cerevisiae_WT2_Michel2017_trimmed1.bam.bed'),\n",
-    "            os.path.join(file_dirname,'..','satay_analysis_testdata','Output_Processing','Cerevisiae_WT2_Michel2017_trimmed2.bam.bed')]\n",
-    "text_file = os.path.join(file_dirname,'..','satay_analysis_testdata','Output_Processing','Cerevisiae_WT2_Michel2017_trimmed1-2_Compare.txt')\n",
+    "bed_files = [os.path.join(file_dirname,'satay_analysis_testdata','Output_Processing','Cerevisiae_WT2_Michel2017_trimmed1.bam.bed'),\n",
+    "            os.path.join(file_dirname,'satay_analysis_testdata','Output_Processing','Cerevisiae_WT2_Michel2017_trimmed2.bam.bed')]\n",
+    "text_file = os.path.join(file_dirname,'satay_analysis_testdata','Output_Processing','Cerevisiae_WT2_Michel2017_trimmed1-2_Compare.txt')\n",
     "\n",
     "for test_path in bed_files:\n",
     "    print(os.path.isfile(test_path))"
@@ -96,11 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gff_file = os.path.join(file_dirname,'Data_Files','Saccharomyces_cerevisiae.R64-1-1.99.gff3')"
+    "gff_file = os.path.join(file_dirname,'Python_scripts','Data_Files','Saccharomyces_cerevisiae.R64-1-1.99.gff3')"
    ]
   },
   {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
