update environment with tabulate

--- a/mini_book/docs/statistics_perchromosome_Compare.ipynb
+++ b/mini_book/docs/statistics_perchromosome_Compare.ipynb
@@ -61,9 +61,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "True\nTrue\n"
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
     }
    ],
    "source": [
@@ -204,9 +207,26 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Print information chromosome I with length 230218\nPrint information chromosome II with length 813184\nPrint information chromosome III with length 316620\nPrint information chromosome IV with length 1531933\nPrint information chromosome V with length 576874\nPrint information chromosome VI with length 270161\nPrint information chromosome VII with length 1090940\nPrint information chromosome VIII with length 562643\nPrint information chromosome IX with length 439888\nPrint information chromosome X with length 745751\nPrint information chromosome XI with length 666816\nPrint information chromosome XII with length 1078177\nPrint information chromosome XIII with length 924431\nPrint information chromosome XIV with length 784333\nPrint information chromosome XV with length 1091291\nPrint information chromosome XVI with length 948066\n"
+     "output_type": "stream",
+     "text": [
+      "Print information chromosome I with length 230218\n",
+      "Print information chromosome II with length 813184\n",
+      "Print information chromosome III with length 316620\n",
+      "Print information chromosome IV with length 1531933\n",
+      "Print information chromosome V with length 576874\n",
+      "Print information chromosome VI with length 270161\n",
+      "Print information chromosome VII with length 1090940\n",
+      "Print information chromosome VIII with length 562643\n",
+      "Print information chromosome IX with length 439888\n",
+      "Print information chromosome X with length 745751\n",
+      "Print information chromosome XI with length 666816\n",
+      "Print information chromosome XII with length 1078177\n",
+      "Print information chromosome XIII with length 924431\n",
+      "Print information chromosome XIV with length 784333\n",
+      "Print information chromosome XV with length 1091291\n",
+      "Print information chromosome XVI with length 948066\n"
+     ]
     }
    ],
    "source": [
@@ -331,9 +351,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Writing to text file...\n...Writing complete.\n"
+     "output_type": "stream",
+     "text": [
+      "Writing to text file...\n",
+      "...Writing complete.\n"
+     ]
     }
    ],
    "source": [
@@ -376,9 +399,50 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Statistical values for datafile: Cerevisiae_WT2_Michel2017_trimmed1.bam.bed and Cerevisiae_WT2_Michel2017_trimmed2.bam.bed\n\n| chromosome   | item                                        |   Dataset 1 |   Dataset 2 |\n\n|--------------|---------------------------------------------|-------------|-------------|\n\n| I            | Number of transposon insertions             | 16437       | 16342       |\n\n| I            | Coverage percent                            |     7.13975 |     7.09849 |\n\n| I            | Mean distance between insertions            |    14.0052  |    14.0866  |\n\n| I            | Median distance between insertions          |     5       |     5       |\n\n| I            | 25th percentile distance between insertions |     2       |     2       |\n\n| I            | 75th percentile distance between insertions |    13       |    13       |\n\n| I            | Largest area devoid of transposons          |  1142       |  1142       |\n\n| I            | Mean number of reads per transposon         |    30.6532  |    30.8216  |\n\n| I            | Median number of reads per transposon       |     9       |     9       |\n\n| I            | 25th percentile reads per transposon        |     2       |     2       |\n\n| I            | 75th percentile reads per transposon        |    30       |    30       |\n\n|              |                                             |             |             |\n\n|--------------|---------------------------------------------|-------------|-------------|\n\n| II           | Number of transposon insertions             | 35907       | 35767       |\n\n| II           | Coverage percent                            |     4.41561 |     4.39839 |\n\n| II           | Mean distance between insertions            |    22.6463  |    22.735   |\n\n| II           | Median distance between insertions          |     7       |     7       |\n\n"
+     "output_type": "stream",
+     "text": [
+      "Statistical values for datafile: Cerevisiae_WT2_Michel2017_trimmed1.bam.bed and Cerevisiae_WT2_Michel2017_trimmed2.bam.bed\n",
+      "\n",
+      "| chromosome   | item                                        |   Dataset 1 |   Dataset 2 |\n",
+      "\n",
+      "|--------------|---------------------------------------------|-------------|-------------|\n",
+      "\n",
+      "| I            | Number of transposon insertions             | 16437       | 16342       |\n",
+      "\n",
+      "| I            | Coverage percent                            |     7.13975 |     7.09849 |\n",
+      "\n",
+      "| I            | Mean distance between insertions            |    14.0052  |    14.0866  |\n",
+      "\n",
+      "| I            | Median distance between insertions          |     5       |     5       |\n",
+      "\n",
+      "| I            | 25th percentile distance between insertions |     2       |     2       |\n",
+      "\n",
+      "| I            | 75th percentile distance between insertions |    13       |    13       |\n",
+      "\n",
+      "| I            | Largest area devoid of transposons          |  1142       |  1142       |\n",
+      "\n",
+      "| I            | Mean number of reads per transposon         |    30.6532  |    30.8216  |\n",
+      "\n",
+      "| I            | Median number of reads per transposon       |     9       |     9       |\n",
+      "\n",
+      "| I            | 25th percentile reads per transposon        |     2       |     2       |\n",
+      "\n",
+      "| I            | 75th percentile reads per transposon        |    30       |    30       |\n",
+      "\n",
+      "|              |                                             |             |             |\n",
+      "\n",
+      "|--------------|---------------------------------------------|-------------|-------------|\n",
+      "\n",
+      "| II           | Number of transposon insertions             | 35907       | 35767       |\n",
+      "\n",
+      "| II           | Coverage percent                            |     4.41561 |     4.39839 |\n",
+      "\n",
+      "| II           | Mean distance between insertions            |    22.6463  |    22.735   |\n",
+      "\n",
+      "| II           | Median distance between insertions          |     7       |     7       |\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -414,6 +478,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -424,12 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
