--- a/mini_book/docs/test.ipynb
+++ b/mini_book/docs/test.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transposon_density_file=os.path.join(file_dirname,'Python_scripts','transposon-density-per-gene-benoit.xlsx')\n",
+    "transposon_density_file=os.path.join(file_dirname,'Python_scripts','Data_files','transposon-density-per-gene-benoit.xlsx')\n",
     "essential_list_1= os.path.join(file_dirname,'Python_scripts','Data_Files','Cervisiae_EssentialGenes_List_1.txt')\n",
     "essential_list_2= os.path.join(file_dirname,'Python_scripts','Data_Files','Cervisiae_EssentialGenes_List_2.txt')\n",
     "yeast_protein_names_list=os.path.join(file_dirname,'Python_scripts','Data_Files','Yeast_Protein_Names.txt')\n",
